align dna and public page

--- a/core/templates/core/public_profile.html
+++ b/core/templates/core/public_profile.html
@@ -70,7 +70,7 @@
             
             {% include 'core/partials/dna/books_per_year_card.html' %}
             
-            {% include 'core/partials/dna/top_genres_authors_row.html' with use_rainbow=False genre_color_class="bg-brand-yellow" author_color_class="bg-brand-cyan" %}
+            {% include 'core/partials/dna/top_genres_authors_row.html' with use_rainbow=True %}
             
             {% include 'core/partials/dna/controversial_ratings_card.html' with controversial_title='Most "Controversial" Ratings 🤯' pronoun_pos="their" %}
             
