--- a/core/templates/core/public_profile.html
+++ b/core/templates/core/public_profile.html
@@ -1,7 +1,7 @@
 {% extends 'core/base.html' %}
 {% load humanize %}
 
-{% block seo_title %}{{ title }} - Bibliotype{% endblock %}
+{% block seo_title %}Bibliotype – {{ heading_name }} Reading DNA{% endblock %}
 
 {% block seo_description %}{% if dna %}View {{ title }} and literary personality. Discover their favorite genres, reading statistics, and book preferences.{% else %}{{ title }} profile.{% endif %}{% endblock %}
 
