--- a/static/src/input.css
+++ b/static/src/input.css
@@ -8,6 +8,7 @@
     --color-brand-background: #f5f5f5;
     --color-brand-text: #1f2937;
     --color-brand-yellow: #fde047;
+    --color-brand-orange: #ffa75e;
     --color-brand-pink: #f9a8d4;
     --color-brand-cyan: #67e8f9;
     --color-brand-green: #86efac;
